--- a/paper/all.bib
+++ b/paper/all.bib
@@ -1026,14 +1026,14 @@ url="http://dx.doi.org/10.1007/978-1-4612-2274-3_3"
  keywords = {concurrency, continuations, higher-order languages, message-passing},
 } 
 
-@Inbook{Thomsen1993,
+@Inbook{TLK+93,
 author="Thomsen, Bent
 and Leth, Lone
 and Giacalone, Alessandro",
 editor="de Bakker, J. W.
 and de Roever, W. -P.
 and Rozenberg, G.",
-title= {{Some issues in the semantics of facile distributed programming}},
+title= {{Some Issues in the Semantics of Facile Distributed Programming}},
 bookTitle="Semantics: Foundations and Applications: REX Workshop Beekbergen, The Netherlands, June 1--4, 1992 Proceedings",
 year="1993",
 publisher="Springer Berlin Heidelberg",
