--- a/paper/examples.tex
+++ b/paper/examples.tex
@@ -10,7 +10,9 @@ demonstrate how mergeable types are built: either by defining merge
 functions for OCaml data types, or by composing existing mergeable
 types.
 
-{\bf Ropes}. A rope is a data structure that faciliates efficient
+\subsection{Ropes}
+
+A rope is a data structure that faciliates efficient
 implementations of operations such as concatenation, splitting, lookup
 and insertion at a random position etc., for a list of values. The
 values are usually characters; their lists being strings. The data
@@ -44,9 +46,11 @@ type that composes mergeability. The compositionality is concretized
 by the \C{MRope} signature , which requires the type of items in the
 list (\C{A.t}) to also be mergeable (\C{A.merge}).
 
+\subsection{Lists}
+
 \input{list-sig}
 
-{\bf Lists}. As an abstract data type, lists support three
+As an abstract data type, lists support three
 operations: \C{insert x i l}, to insert an element \C{x} at position
 \C{i} in the list \C{l}, \C{delete i l}, to delete the element at
 \C{i}'th position, and \C{subst i x l}, to substitute the element at
@@ -126,21 +130,21 @@ lists, $v_1$ and $v_2$ w.r.t their common ancestor $v$, transforms one
 of them (say, $s_1$) w.r.t $s_2$ to obtain $s_1'$, and finally applies
 (the operations defined by) $s_1'$ to $v_2$ to obtain the merged list.
 
-A significant advantage of mergeable types is their composability. As
-demonstrated by \C{MList}, the merge semantics of a composed mergeable
-type is a composition of the merge operations of its constituent types.  For
-instance, a mergeable list of integers can be obtained by
-instantiating \C{MList} for an \C{Int} type, where \C{Int.merge} is
-the same as \C{Counter.merge} (Sec.~\ref{sec:intro}).
-An alternative instantiation of \C{MList} is for a quantity type
+\subsection{Lists of Integers and Quantities}. 
+
+A mergeable list of integers can be composed using mergeable lists and
+mergeable integers.  Concretely, it is a composition of \C{MList} and
+\C{Int} types (i.e., \C{MList(Int)}), where \C{Int.merge} is the same
+as \C{Counter.merge} (Sec.~\ref{sec:intro}).  An alternative
+instantiation of \C{MList} is for a quantity type
 \begin{wrapfigure}{l}{.45\textwidth}
   \centering
   \includegraphics[scale=0.4]{Figures/list-eg}
   \caption{Lists of mergeable values are mergeable. }
   \label{fig:list-eg}
 \end{wrapfigure}
-(\C{Qty}) that supports \C{add} and \C{subtract}
-operations, but defines its \C{merge} opeation a little differently:
+(\C{Qty}) that supports \C{add} and \C{subtract} operations, but
+defines its \C{merge} opeation a little differently:
 \begin{ocaml}
 let merge lca v1 v2 = if v1 = lca then v2
     else (if v2 = lca then v1 else max v1 v2)
@@ -149,6 +153,11 @@ let merge lca v1 v2 = if v1 = lca then v2
 the same semantics under a sequential execution. Their differences
 however manifest under a concurrent execution, where both adopt
 different methods to reconcile concurrent updates.
+
+If efficient insertions and lookups (by position) are desired over a
+large list of integers, while admitting concurrent updates, we require
+a mergeable rope of integers, which can be obtained by simply
+composing \C{MList(Int)} with \C{MRope} (i.e., \C{MRope(MList(Int))}).
 
 % The mergeable list data type demonstrates a common pattern of writing
 % \C{merge} functions applicable to a range of functional data
@@ -162,12 +171,40 @@ different methods to reconcile concurrent updates.
 %   in-order traversal, followed by reconstructing the tree.
 % }.
 
+\subsection{Shopping List}
 
-{\bf Shopping List}. A non-trivial demonstration of composability of
-mergeable types is a shopping list application. The application allows
-its users to collaboratively build a grocery shopping list (listing
-items in the decreasing order of their priority), by adding new items
-with a specified quantity, deleting existing items, and increasing or
+\begin{figure}
+\centering
+\begin{tabular}{l||l}
+\begin{ocaml}
+let alice_f : L.t unit t =
+  fork bob_f >>= fun () -> (* Invite Bob *)
+  get () >>= fun c0 ->
+  let qty = L.assoc "eggs" in
+  let c0' = L.subst 1 ("eggs",qty+1) c0 in
+  sync () ~v:c0' >>=
+  fun c1 -> return ()
+\end{ocaml}
+&
+\begin{ocaml}
+let bob_f : L.t unit t =
+  get () >>= fun c0 ->
+  let c0' = L.insert ("candy",Qty.of_int 1) 1 @@ 
+            L.delete @@ L.lookup "eggs" in
+  sync () ~v:c0' >>=
+  fun c1 -> return ()
+\end{ocaml}
+\\
+\end{tabular}
+\caption{Bob and Alice collaboratively build a grocery shopping list}
+\label{fig:shopping-list-code}
+\end{figure}
+
+A non-trivial demonstration of composability of mergeable types is a
+shopping list application. The application allows its users to
+collaboratively build a grocery shopping list (listing items in the
+decreasing order of their priority), by adding new items with a
+specified quantity, deleting existing items, and increasing or
 decreasing their quantity. An item (\C{Item.t}) is represented as a
 tuple of its name (a string) and the quantity (A \C{Qty.t}). The merge
 function for
@@ -179,16 +216,19 @@ function for
 \end{wrapfigure}
 \C{Item.t} merges the quantities of items (using \C{Qty.merge}) having
 the same names. Items with different names are considered distinct. A
-shopping list is a mergeable list of items (i.e.,
-\C{MList(Item)}). \C{MList(Item).merge} automatically lifts the merge
-semantics for items to merge semantics for lists of items.
+shopping list is a mergeable list of items, i.e., \C{MList(Item)} (a
+grocery shopping list may not be large enough to justify using ropes,
+but \C{MRope(MList(Item))} is definitely a possibility).
+\C{MList(Item).merge} automatically lifts the merge semantics for
+items to merge semantics for lists of items.
 Fig.~\ref{fig:shopping-list} illustrates its behavior.  Here, two
 users, Alice and Bob, concurrently edit a shopping list whose initial
-contents are \C{milk} and \C{eggs}. While both simultaneously update the
-quantity of eggs, Bob also removes milk and inserts candy. The merged
-shopping list contains eggs and candy, where the quantity of eggs is
-obtained by merging Alice's and Bob's quantity as per the definition
-of \C{Qty.merge}.
+contents are \C{milk} and \C{eggs}. While both simultaneously update
+the quantity of eggs, Bob also removes milk and inserts candy
+(Fig.~\ref{fig:shopping-list-code} shows the \name code for the
+concurrent sessions). The merged shopping list contains eggs and
+candy, where the quantity of eggs is obtained by merging Alice's and
+Bob's quantity as per the definition of \C{Qty.merge}.
 
 The examples described above make certain assumptions about the model
 and the underlying system, such as the existence of a single least
