--- a/paper/examples.tex
+++ b/paper/examples.tex
@@ -57,7 +57,7 @@ mergeable if they preserve the following properties:
   the final list. No element is deleted unless it is deleted in at
   least one list.
   \item An element deleted in one list will not reappear in the merged
-  list (unlike Amazon's replicated shopping cart~\cite{dynamo}).
+  list (unlike Amazon's replicated shopping cart~\cite{Dynamo}).
   \item The order of elements is retained. That is, if $x$ occurs
   before $y$ in one of the lists, and if both elements are present in
   the merged list, then $x$ occurs before $y$ in the merged list.
