--- a/paper/model.tex
+++ b/paper/model.tex
@@ -25,7 +25,6 @@
 
 In this section, we describe the \name programming model through the
 example of a collaborative drawing application we call \drawsome.
-
 Fig.~\ref{fig:canvas-sig} shows the signature of the \drawsome
 application. \drawsome represents a free-hand drawing canvas in terms
 of a tree of quadrants.  Each quadrant is simply a leaf node
@@ -36,17 +35,17 @@ representation is thus optimized for sparse canvases, such as
 whiteboards. The application supports three simple operations:
 creating a new canvas, setting the pixel at a specified coordinate,
 and returning the pixel at a given coordinate. The \C{merge} function
-and \C{deriving versioned} directive are explained below.  \drawsome
-lets multiple users collaborate on a canvas that is conceptually
-shared among them. Under a shared-memory abstraction, there would be a
-single copy of the canvas that is updated concurrently by multiple
-clients; from the perspective of any single client, the canvas could
-change without any explicit intervention. \name ascribes functional
-semantics to sharing by letting each client work on its own version of
-the state (the tree data structure in this example), later merging
-concurrent versions on-demand.  Thus, the primary artifact of the
-\name programming model is a versioned data structure in which
-different versions are managed by different clients.
+is explained below.  \drawsome lets multiple users collaborate on a
+canvas that is conceptually shared among them. Under a shared-memory
+abstraction, there would be a single copy of the canvas that is
+updated concurrently by multiple clients; from the perspective of any
+single client, the canvas could change without any explicit
+intervention. \name ascribes functional semantics to sharing by
+letting each client work on its own version of the state (the tree
+data structure in this example), later merging concurrent versions
+on-demand.  Thus, the primary artifact of the \name programming model
+is a versioned data structure in which different versions are managed
+by different clients.
 
 %% The library operates on a representation of versioned data
 %% structures optimized for persistence on disk
@@ -59,7 +58,7 @@ different versions are managed by different clients.
 %% \C{of\_canvas} and \C{to\_canvas} of types \C{Canvas.t $\rightarrow$
 %%   t} and \C{t $\rightarrow$ Canvas.t}, respectively.
 
-\name requires a three-way \C{merge} function to merge the concurrent
+\name requires a three-way \C{merge} function to merge concurrent
 versions of a drawing canvas (see Fig.~\ref{fig:merge-canvas}). The
 three arguments include two concurrent versions (\C{v1} and \C{v2}),
 and their least common ancestor (\C{lca}) - the version from which the
@@ -67,10 +66,10 @@ two concurrent versions evolved independently. The merge function can
 make use of the pixel values of the common ancestor to merge the pixel
 values on both the canvases. For instance, if the color of a pixel in
 \C{v1} is white, and in \C{v2} it is green, and its color in \C{lca}
-\begin{wrapfigure}{l}{.5\textwidth}
+\begin{wrapfigure}{l}{.4\textwidth}
 \centering
-\includegraphics[scale=0.5]{Figures/canvas-merging}
-\caption{Merging concurrent versions (\C{v1} and \C{v2} ) of a drawing
+\includegraphics[scale=0.43]{Figures/canvas-merging}
+\caption{Merging concurrent versions (\C{v1} and \C{v2}) of a drawing
 canvas. \C{lca} is their common ancestor.}
 \label{fig:canvas-merging}
 \end{wrapfigure}
@@ -140,8 +139,8 @@ Functions \C{return} and \C{bind} have their usual monadic
     val sync_next_version: unit -> ?v:'a -> ('a, 'a) t
   end
   \end{ocaml}
-\label{fig:dali-monad}
-\caption{Signature of the \name monad}
+  \caption{Signature of the \name monad}
+  \label{fig:dali-monad}
 \end{center}
 \end{figure}
 interpretation. \C{get\_current\_version} is like the \C{State}
