--- a/paper/examples.tex
+++ b/paper/examples.tex
@@ -1,5 +1,5 @@
 \section{Mergeable Types}
-\ref{sec:mergeable_types}
+\label{sec:mergeable_types}
 
 \input{rope-sig}
 
@@ -12,7 +12,7 @@ functions for OCaml data types, or by composing existing mergeable
 types.
 
 \subsection{Ropes}
-\ref{sec:ropes}
+\label{sec:ropes}
 
 A rope is a data structure that faciliates efficient
 implementations of operations such as concatenation, splitting, lookup
@@ -49,7 +49,7 @@ by the \C{MRope} signature , which requires the type of items in the
 list (\C{A.t}) to also be mergeable (\C{A.merge}).
 
 \subsection{Lists}
-\ref{sec:lists}
+\label{sec:lists}
 
 \input{list-sig}
 
@@ -64,7 +64,7 @@ mergeable if they preserve the following properties:
   the final list. No element is deleted unless it is deleted in at
   least one list.
   \item An element deleted in one list will not reappear in the merged
-  list (unlike Amazon's replicated shopping cart~\cite{dynamo}).
+  list (unlike Amazon's replicated shopping cart~\cite{Dynamo}).
   \item The order of elements is retained. That is, if $x$ occurs
   before $y$ in one of the lists, and if both elements are present in
   the merged list, then $x$ occurs before $y$ in the merged list.
