--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -332,7 +332,7 @@ morekeywords={module, match, when, @@deriving, not, : , /\\}
 
 \input{system-model}
 
-\input{evaluation}
+%\input{evaluation}
 
 \input{related}
 %% Acknowledgments
