--- a/paper/opsem.tex
+++ b/paper/opsem.tex
@@ -92,7 +92,7 @@ H & \in & \mathtt{Branch\; Histories} & \coloneqq & t \mapsto b\\
 \RULE
 {
   t\neq t' \spc
-% \under{H}{v' \mbleto v} \spc
+  \under{H}{v' \mbleto v} \spc
 % \C{world}(H,t') \semsucceq \C{world}(H,t)\spc 
   v' \not\preceq v \spc
   v_m = \C{merge}(\C{lca}(H(t),H(t')), v, v') \spc
