--- a/paper/related.tex
+++ b/paper/related.tex
@@ -18,8 +18,8 @@ fully decentralized operation and is robust to network partitions and
 failures. Just as significantly, \name\ allows applications to
 customize join semantics with programmable merge operations.  Indeed,
 the integration of a version-based mechanism within OCaml allows a
-degree of type safety, composability, and polymorphism not available
-in related systems.
+degree of type safety, composability, and profitable use of
+polymorphism not available in related systems.
 
 \cite{Burckhardt2015} also presents an operational model of a
 replicated data store that is based on the abstract system model
