--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -257,14 +257,9 @@ semantics. Sec.~\ref{sec:system-model} considers an instantiation of
 the model suitable for distributed environments with network
 partitions and failures.  Implementation details describing how we
 incorporate mergeable types into OCaml are presented in
-Sec.~\ref{sec:impl}.  Experimental results and benchmarks are given
-in Sec.~\ref{sec:evaluation}.
-
-
-
-, along with
-a series of examples illustrating how merge operations can be defined
-and used.  Sec.~\ref{sec:
+Sec.~\ref{sec:impl}.  Experimental results and benchmarks are given in
+Sec.~\ref{sec:evaluation}.  Secs.~\ref{sec:related}
+and~\ref{sec:conclusions} describes related work and conclusions.
 
 
 %% Persistence adds yet another dimension to the problem. Functional data
