--- a/paper/meta.tex
+++ b/paper/meta.tex
@@ -1,4 +1,5 @@
 \subsection{Properties of the LCA}
+\label{sec:meta}
 
 When merging two concurrent versions $v_1$ and $v_2$, the common
 ancestor argument for \C{merge} must be the LCA of $v_1$ and $v_2$,
