--- a/paper/mergeable-types.tex
+++ b/paper/mergeable-types.tex
@@ -130,7 +130,7 @@ map respective concurrent versions to the same value. The
 \RULE
 {
   t\neq t' \spc
-% \under{H}{v' \mbleto v} \spc
+  \under{H}{v' \mbleto v} \spc
 % \C{world}(H,t') \semsucceq \C{world}(H,t)\spc 
   v' \not\preceq v \spc
   (P',Q') = M(\C{lca}(H(t),H(t')), v, v') \spc
