--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -272,7 +272,8 @@ morekeywords={module, match, when, @@deriving, not, : , /\\}
   an instantiation of OCaml equipped with these features.  Our
   implementation is integrated with a content-addressable distributed
   storage layer that allows any OCaml program to be easily transformed
-  into an efficient, highly available, distributed application.
+  into a composable, efficient, and highly-available distributed
+  application.
 \end{abstract}
 
 
